feat: authentication added

--- a/cart.html
+++ b/cart.html
@@ -22,27 +22,34 @@
             </button>
         </div>
         <div class="icons">
-            <button class="login btn primary-solid-btn">LOGIN</button>
+            <a class="text-no-decor" href="./login.html"> 
+            <button class="login btn primary-solid-btn">
+                Logout</button></a>
             <button class="icon-btn btn-no-decor">
-                <i class="far fa-2x fa-heart"></i>
-                <div class="badge-right badge-text badge-round">5</div>
+                <a href="./wishlist.html">
+                    <i class="far fa-2x fa-heart"></i>
+                    <div class="badge-right badge-text badge-round">5</div>
+                </a>
             </button>
             <button class="icon-btn btn-no-decor">
-                <i class="fas fa-2x fa-shopping-cart"></i>
-                <div class="badge-right badge-text badge-round">6</div>
+                <a href="./cart.html">
+                    <i class="fas fa-2x fa-shopping-cart"></i>
+                    <div class="badge-right badge-text badge-round">6</div>
+                </a>
             </button>
         </div>
     </header>
     <main>
         <aside class="cart-items">
             <div class="horizontal-card">
-                <img class="img-card-horizontal" src="Assets/Indoor/4-succulents-indoor.jpg" alt="Socculent Plants" loading="lazy"/>
+                <img class="img-card-horizontal" src="Assets/Indoor/4-succulents-indoor.jpg" alt="Socculent Plants"
+                    loading="lazy" />
                 <div class="card-horizontal-desc">
                     <p>Top 4 Die Succulent Indoor Plants Pack</p>
                     <div class="horizontal-price"><span class="stroked-price"><i
                                 class="fas ruppee-stroke fa-rupee-sign"></i> 995</span>
                         <span class="actual-price bold"><i class="fas ruppee fa-rupee-sign"></i> 749</span></div>
-                    <div class="disc-percent">25%</div>
+                    <div class="disc-percent">25% Off</div>
                     <div class="quantity-cart-item">Quantity:
                         <button class="btn-no-decor"><i class="fas fa-minus-circle"></i></button>
                         <input class="input-quantity" min="1" value="1" />
@@ -53,13 +60,14 @@
                 </div>
             </div>
             <div class="horizontal-card">
-                <img class="img-card-horizontal" src="Assets/Outdoor/gladiolus-random-color.jpg" alt="Gladiolus flower" loading="lazy"/>
+                <img class="img-card-horizontal" src="Assets/Outdoor/gladiolus-random-color.jpg" alt="Gladiolus flower"
+                    loading="lazy" />
                 <div class="card-horizontal-desc">
                     <p>Gladiolus flower bulbs (Random color)</p>
                     <div class="horizontal-price"><span class="stroked-price"><i
                                 class="fas ruppee-stroke fa-rupee-sign"></i> 200</span>
                         <span class="actual-price bold"><i class="fas ruppee fa-rupee-sign"></i> 189</span></div>
-                    <div class="disc-percent">10%</div>
+                    <div class="disc-percent">10% Off</div>
                     <div class="quantity-cart-item">Quantity:
                         <button class="btn-no-decor"><i class="fas fa-minus-circle"></i></button>
                         <input class="input-quantity" min="1" value="1" />
