--- a/wishlist.html
+++ b/wishlist.html
@@ -22,92 +22,102 @@
             </button>
         </div>
         <div class="icons">
-            <button class="login btn primary-solid-btn">LOGIN</button>
+            <a class="text-no-decor" href="./login.html">
+                <button class="login btn primary-solid-btn">
+                    Logout</button></a>
             <button class="icon-btn btn-no-decor">
-                <i class="far fa-2x fa-heart"></i>
-                <div class="badge-right badge-text badge-round">5</div>
+                <a href="./wishlist.html">
+                    <i class="far fa-2x fa-heart"></i>
+                    <div class="badge-right badge-text badge-round">5</div>
+                </a>
             </button>
             <button class="icon-btn btn-no-decor">
-                <i class="fas fa-2x fa-shopping-cart"></i>
-                <div class="badge-right badge-text badge-round">6</div>
+                <a href="./cart.html">
+                    <i class="fas fa-2x fa-shopping-cart"></i>
+                    <div class="badge-right badge-text badge-round">6</div>
+                </a>
             </button>
         </div>
     </header>
     <main>
-       <h1 class="heading-center">My Wishlist</h1>
-       <div class="wishlist-wrapper">
-        <div class="card-item">
-            <button class="btn abc primary-solid-btn add-cart-btn">Add to Cart</button>
-            <img class="img-item" src="./assets/Indoor/4-succulents-indoor.jpg" alt="Succulent Plants" loading="lazy"/>
-            <div class="badge-disc">Save 25%</div>
-            <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
-            <div class="card-info">
-                <div class="stroked-price">
-                    <i class="fas ruppee-stroke fa-rupee-sign"></i>995</div>
-                <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i>749</div>
-                <div class="card-desc">Top 4 Die Succulent Pack</div>
+        <h1 class="heading-center">My Wishlist</h1>
+        <div class="wishlist-wrapper">
+            <div class="card-item">
+                <button class="btn abc primary-solid-btn add-cart-btn">Move to Cart</button>
+                <img class="img-item" src="./assets/Indoor/4-succulents-indoor.jpg" alt="Succulent Plants"
+                    loading="lazy" />
+                <div class="badge-disc">Save 25%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
+                <div class="card-info">
+                    <div class="stroked-price">
+                        <i class="fas ruppee-stroke fa-rupee-sign"></i>995</div>
+                    <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i>749</div>
+                    <div class="card-desc">Top 4 Die Succulent Pack</div>
+
+                </div>
+            </div>
+            <div class="card-item">
+                <button class="btn primary-solid-btn add-cart-btn">Move to Cart</button>
+                <img class="img-item" src="./assets/Outdoor/gladiolus-random-color.jpg" alt="Gladius Bulbs"
+                    loading="lazy" />
+                <div class="badge-disc">Save 10%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-heart"></i></button>
+                <div class="card-info">
+                    <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 200</div>
+                    <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 189</div>
+                    <div class="card-desc">Gladiolus (Random color)</div>
+                </div>
 
             </div>
-        </div>
-        <div class="card-item">
-            <button class="btn primary-solid-btn add-cart-btn">Add to Cart</button>
-            <img class="img-item" src="./assets/Outdoor/gladiolus-random-color.jpg" alt="Gladius Bulbs" loading="lazy"/>
-            <div class="badge-disc">Save 10%</div>
-            <button class="btn-wishlist btn-no-decor"><i class="fas fa-heart"></i></button>
-            <div class="card-info">
-                <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 200</div>
-                <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 189</div>
-                <div class="card-desc">Gladiolus (Random color)</div>
+            <div class="card-item">
+                <button class="btn primary-solid-btn add-cart-btn">Move to Cart</button>
+                <img class="img-item" src="./assets/Outdoor/crocus-random-color-bulbs.jpg" alt="Crocus flower Bulbs"
+                    loading="lazy" />
+                <div class="badge-disc">Save 25%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
+                <div class="card-info">
+                    <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 995</div>
+                    <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 749</div>
+                    <div class="card-desc">Crocus (Random Color) - Bulbs (set of 5)</div>
+                </div>
             </div>
+            <div class="card-item">
+                <button class="btn primary-solid-btn add-cart-btn">Move to Cart</button>
+                <img class="img-item" src="./assets/Accessories/warli-painting-ceramic-3pots.jpg"
+                    alt="Warli Ceramic Pots" loading="lazy" />
+                <div class="badge-disc">Save 20%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
+                <div class="card-info">
+                    <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 1549</div>
+                    <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 1239</div>
+                    <div class="card-desc">Warli Painting Ceramic Pots - Pack of 3</div>
+                </div>
+            </div>
+            <div class="card-item">
+                <button class="btn abc primary-solid-btn add-cart-btn">Move to Cart</button>
+                <img class="img-item" src="./assets/Accessories/seeds.png" alt="15 Vegetable Seed" loading="lazy" />
+                <div class="badge-disc">Save 68%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
+                <div class="card-info">
+                    <div class="stroked-price">
+                        <i class="fas ruppee-stroke fa-rupee-sign"></i>1245</div>
+                    <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i>399</div>
+                    <div class="card-desc">Set of 15 Vegetable Seeds</div>
+                </div>
+            </div>
+            <div class="card-item">
+                <button class="btn primary-solid-btn add-cart-btn">Move to Cart</button>
+                <img class="img-item" src="./assets/Accessories/bottle-pot-yellow.jpg" alt="Yellow Bottle Pot"
+                    loading="lazy" />
+                <div class="badge-disc">Save 25%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
+                <div class="card-info">
+                    <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 1000</div>
+                    <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 750</div>
+                    <div class="card-desc">12.2 inch (31 cm) Bottle Shape Ceramic Pot</div>
+                </div>
 
-        </div>
-        <div class="card-item">
-            <button class="btn primary-solid-btn add-cart-btn">Add to Cart</button>
-            <img class="img-item" src="./assets/Outdoor/crocus-random-color-bulbs.jpg" alt="Crocus flower Bulbs" loading="lazy" />
-            <div class="badge-disc">Save 25%</div>
-            <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
-            <div class="card-info">
-                <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 995</div>
-                <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 749</div>
-                <div class="card-desc">Crocus (Random Color) - Bulbs (set of 5)</div>
             </div>
-        </div>
-        <div class="card-item">
-            <button class="btn primary-solid-btn add-cart-btn">Add to Cart</button>
-            <img class="img-item" src="./assets/Accessories/warli-painting-ceramic-3pots.jpg"
-                alt="Warli Ceramic Pots" loading="lazy"/>
-            <div class="badge-disc">Save 20%</div>
-            <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
-            <div class="card-info">
-                <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 1549</div>
-                <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 1239</div>
-                <div class="card-desc">Warli Painting Ceramic Pots - Pack of 3</div>
-            </div>
-        </div>
-        <div class="card-item">
-            <button class="btn abc primary-solid-btn add-cart-btn">Add to Cart</button>
-            <img class="img-item" src="./assets/Accessories/seeds.png" alt="15 Vegetable Seed" loading="lazy"/>
-            <div class="badge-disc">Save 68%</div>
-            <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
-            <div class="card-info">
-                <div class="stroked-price">
-                    <i class="fas ruppee-stroke fa-rupee-sign"></i>1245</div>
-                <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i>399</div>
-                <div class="card-desc">Set of 15 Vegetable Seeds</div>
-            </div>
-        </div>
-        <div class="card-item">
-            <button class="btn primary-solid-btn add-cart-btn">Add to Cart</button>
-            <img class="img-item" src="./assets/Accessories/bottle-pot-yellow.jpg" alt="Yellow Bottle Pot" loading="lazy"/>
-            <div class="badge-disc">Save 25%</div>
-            <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
-            <div class="card-info">
-                <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 1000</div>
-                <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 750</div>
-                <div class="card-desc">12.2 inch (31 cm) Bottle Shape Ceramic Pot</div>
-            </div>
-
-        </div>
     </main>
 
     <footer>
