--- a/productpage.html
+++ b/productpage.html
@@ -22,14 +22,20 @@
             </button>
         </div>
         <div class="icons">
-            <button class="login btn primary-solid-btn">LOGIN</button>
+            <a class="text-no-decor" href="./login.html">
+                <button class="login btn primary-solid-btn">
+                    LOGIN</button></a>
             <button class="icon-btn btn-no-decor">
-                <i class="far fa-2x fa-heart"></i>
-                <div class="badge-right badge-text badge-round">5</div>
+                <a href="./wishlist.html">
+                    <i class="far fa-2x fa-heart"></i>
+                    <div class="badge-right badge-text badge-round">5</div>
+                </a>
             </button>
             <button class="icon-btn btn-no-decor">
-                <i class="fas fa-2x fa-shopping-cart"></i>
-                <div class="badge-right badge-text badge-round">6</div>
+                <a href="./cart.html">
+                    <i class="fas fa-2x fa-shopping-cart"></i>
+                    <div class="badge-right badge-text badge-round">6</div>
+                </a>
             </button>
         </div>
     </header>
@@ -60,7 +66,7 @@
                 <p>2500</p>
             </div>
         </section>
-        
+
         <hr>
 
         <section class="category-section">
@@ -92,6 +98,7 @@
                 <img class="img-item" src="./assets/Indoor/4-succulents-indoor.jpg" alt="Succulent Plants"
                     loading="lazy" />
                 <div class="badge-disc">Save 25%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
                 <div class="card-info">
                     <div class="stroked-price">
                         <i class="fas ruppee-stroke fa-rupee-sign"></i>995</div>
@@ -105,6 +112,7 @@
                 <img class="img-item" src="./assets/Outdoor/gladiolus-random-color.jpg" alt="Gladius Bulbs"
                     loading="lazy" />
                 <div class="badge-disc">Save 10%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
                 <div class="card-info">
                     <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 200</div>
                     <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 189</div>
@@ -117,6 +125,7 @@
                 <img class="img-item" src="./assets/Outdoor/crocus-random-color-bulbs.jpg" alt="Crocus flower Bulbs"
                     loading="lazy" />
                 <div class="badge-disc">Save 25%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
                 <div class="card-info">
                     <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 995</div>
                     <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 749</div>
@@ -128,6 +137,7 @@
                 <img class="img-item" src="./assets/Accessories/warli-painting-ceramic-3pots.jpg"
                     alt="Warli Ceramic Pots" loading="lazy" />
                 <div class="badge-disc">Save 20%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
                 <div class="card-info">
                     <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 1549</div>
                     <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 1239</div>
@@ -138,6 +148,7 @@
                 <button class="btn abc primary-solid-btn add-cart-btn">Add to Cart</button>
                 <img class="img-item" src="./assets/Accessories/seeds.png" alt="15 Vegetable Seed" loading="lazy" />
                 <div class="badge-disc">Save 68%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
                 <div class="card-info">
                     <div class="stroked-price">
                         <i class="fas ruppee-stroke fa-rupee-sign"></i>1245</div>
@@ -150,6 +161,7 @@
                 <img class="img-item" src="./assets/Accessories/bottle-pot-yellow.jpg" alt="Yellow Bottle Pot"
                     loading="lazy" />
                 <div class="badge-disc">Save 25%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
                 <div class="card-info">
                     <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 1000</div>
                     <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 750</div>
@@ -161,6 +173,7 @@
                 <button class="btn primary-solid-btn add-cart-btn">Add to Cart</button>
                 <img class="img-item" src="./assets/Tools/1025-bonsai-tool.jpg" alt="Gardening Tools" loading="lazy" />
                 <div class="badge-disc">Save 10%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
                 <div class="card-info">
                     <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 299</div>
                     <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 269</div>
@@ -172,6 +185,7 @@
                 <img class="img-item" src="./assets/Outdoor/outdoor-flowering-3.jpg" alt="Outdoor Plant Set"
                     loading="lazy" />
                 <div class="badge-disc">Save 30%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
                 <div class="card-info">
                     <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 1570</div>
                     <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 1099</div>
@@ -183,6 +197,7 @@
                 <img class="img-item" src="./assets/Outdoor/adenium-plant-desert-rose.jpg" alt="Adenium Plant"
                     loading="lazy" />
                 <div class="badge-disc">Save 10%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
                 <div class="card-info">
                     <div class="stroked-price">
                         <i class="fas ruppee-stroke fa-rupee-sign"></i>399</div>
@@ -196,6 +211,7 @@
                 <img class="img-item" src="./assets/Accessories/10-cm-round-ceramic-pots-with-rim.jpg"
                     alt="Ceramic Pots" loading="lazy" />
                 <div class="badge-disc">Save 10%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
                 <div class="card-info">
                     <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 699</div>
                     <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 629</div>
@@ -207,6 +223,7 @@
                 <button class="btn primary-solid-btn add-cart-btn">Add to Cart</button>
                 <img class="img-item" src="./assets/Accessories/pebbles-white-small.jpg" alt="White Pebbles"
                     loading="lazy" />
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
                 <div class="card-info">
                     <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 199</div>
                     <div class="card-desc">Marble Pebbles (White, Small, Polished) - 1 kg</div>
@@ -217,6 +234,7 @@
                 <img class="img-item" src="./assets/Accessories/nutrient-rich-soil-mix.jpg"
                     alt="Nutrient rich Soil Mixer" loading="lazy" />
                 <div class="badge-disc">Save 20%</div>
+                <button class="btn-wishlist btn-no-decor"><i class="fas fa-2x fa-heart"></i></button>
                 <div class="card-info">
                     <div class="stroked-price"><i class="fas ruppee-stroke fa-rupee-sign"></i> 499</div>
                     <div class="actual-price"><i class="fas ruppee fa-rupee-sign"></i> 399</div>
